[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/icons/pet_menu_icon_unselected.png" type="Texture" id=1]
[ext_resource path="res://assets/icons/gem_menu_icon_unselected.png" type="Texture" id=2]
[ext_resource path="res://assets/icons/progress_menu_icon_unselected.png" type="Texture" id=3]
[ext_resource path="res://ui_components/screen_bottom_bar/ScreenBottomButton.tscn" type="PackedScene" id=4]
[ext_resource path="res://scripts/ui_components/screen_bottom_bar/ScreenBottomBar.gd" type="Script" id=5]
[ext_resource path="res://assets/icons/character_menu_icon_selected.png" type="Texture" id=6]
[ext_resource path="res://assets/icons/dungeon_menu_icon_unselected.png" type="Texture" id=7]
[ext_resource path="res://ui_components/general/SingleSeparator.tscn" type="PackedScene" id=8]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.0784314, 0.101961, 0.117647, 1 )

[node name="ScreenBottomBar" type="Control"]
anchor_right = 1.0
anchor_bottom = 0.1
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SingleSeparator" parent="." instance=ExtResource( 8 )]
margin_bottom = 2.72

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_top = 0.07
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PetButton" parent="HBoxContainer" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 142.0
margin_bottom = 119.0
size_flags_horizontal = 3
size_flags_vertical = 3
icon = ExtResource( 1 )

[node name="GemButton" parent="HBoxContainer" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 144.0
margin_right = 286.0
margin_bottom = 119.0
size_flags_horizontal = 3
size_flags_vertical = 3
icon = ExtResource( 2 )

[node name="HomeButton" parent="HBoxContainer" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 288.0
margin_right = 431.0
margin_bottom = 119.0
size_flags_horizontal = 3
size_flags_vertical = 3
icon = ExtResource( 3 )

[node name="CharacterButton" parent="HBoxContainer" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 433.0
margin_right = 575.0
margin_bottom = 119.0
size_flags_horizontal = 3
size_flags_vertical = 3
icon = ExtResource( 6 )

[node name="DungeonButton" parent="HBoxContainer" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 577.0
margin_right = 720.0
margin_bottom = 119.0
size_flags_horizontal = 3
size_flags_vertical = 3
icon = ExtResource( 7 )
